After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753864 - editing-services: Fix memory leaks when context parse fails.
editing-services: Fix memory leaks when context parse fails.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
git master
Other Linux
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-20 08:16 UTC by Vineeth
Modified: 2015-09-30 12:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstreamer:editing-services: fix memory leaks during context parse failures. (5.09 KB, patch)
2015-08-20 08:18 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-08-20 08:16:40 UTC
In all places where g_option_context_parse is being used, when it fails, the context and error variables are not getting freed, which will result in memory leaks.
Along with that replacing g_error_free with g_clear_error in these files, which is a better way to free error, as it checks if the variable is Non-NULL and then sets it to NULL on freeing.
Comment 1 Vineeth 2015-08-20 08:18:05 UTC
Created attachment 309684 [details] [review]
gstreamer:editing-services: fix memory leaks during context parse failures.
Comment 2 Thibault Saunier 2015-09-30 12:52:58 UTC
commit fd29e28c71160ceee37eb21a03967bfbc66b0b51
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Thu Aug 20 17:16:50 2015 +0900

    editing-services: Fix memory leaks when context parse fails
    
    When g_option_context_parse fails, context and error variables are not getting free'd
    which results in memory leaks. Free'ing the same.
    
    And replacing g_error_free with g_clear_error, which checks if the error being passed
    is not NULL and sets the variable to NULL on free'ing.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=753864